--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "icons": "^1.0.0",
+    "next": "14.2.3",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "postcss": "^8",
